# light_object

./: CMakeLists.txt
demo/: CMakeLists.txt
demo/src/: main.c
include/: light_object.h
src/: light_object.c
